# Security-demo

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  bulid.sh  config.status  configure  configure.ac  configure.ac_backup  cpplint.py  libtool  sec_v2xd
Local_CA/: Readme.txt
Local_CA/RootCA/: ca_openssl.cnf  cacert.pem  index.txt  subca_req.pem
Local_CA/RootCA/newcerts/: 01.pem
Local_CA/RootCA/private/: cakey.pem
Local_CA/SubCA/: Server_req.pem  index.txt
Local_CA/SubCA/private/: cakey.pem
Script/example/: 01_pub.pem  HSM_Signing_Tool.py  gen_signature.sh  kms.sh
Script/example/public_key/: autosar_publickey.pem  extract_pubkey.py
Script/example/sample_key_pair/: sample_key_pri.pem  sample_key_pub.pem
asn/: Certificate.c  Certificate.h  CertificateDigest.c  CertificateDigest.h  EccCurve.c  EccCurve.h  EccPoint.c  EccPoint.h  Elevation.c  Elevation.h  HashAlgorithm.c  HashAlgorithm.h  HashedId3.c  HashedId3.h  HashedId8.c  HashedId8.h  HeaderInfo.c  HeaderInfo.h  IssuerID.c  IssuerID.h  KnownLatitude.c  KnownLatitude.h  KnownLongitude.c  KnownLongitude.h  Latitude.c  Latitude.h  Longitude.c  Longitude.h  Makefile  Makefile.am  Makefile.am.sample  Makefile.in  NinetyDegreeInt.c  NinetyDegreeInt.h  OneEightyDegreeInt.c  OneEightyDegreeInt.h  Opaque.c  Opaque.h  Payload.c  Payload.h  (+44 more)
asn/.deps/: BIT_STRING.Plo  BOOLEAN.Plo  Certificate.Plo  CertificateDigest.Plo  EccCurve.Plo  EccPoint.Plo  Elevation.Plo  HashAlgorithm.Plo  HashedId3.Plo  HashedId8.Plo  HeaderInfo.Plo  INTEGER.Plo  IssuerID.Plo  KnownLatitude.Plo  KnownLongitude.Plo  Latitude.Plo  Longitude.Plo  NULL.Plo  NativeEnumerated.Plo  NativeInteger.Plo  NinetyDegreeInt.Plo  OCTET_STRING.Plo  OneEightyDegreeInt.Plo  Opaque.Plo  Payload.Plo  PublicVerifyKey.Plo  SecuredMessage.Plo  SequenceOfCertificate.Plo  Signature.Plo  SignedData.Plo  SignerInfo.Plo  SubjectAttributes.Plo  SubjectInfo.Plo  SubjectType.Plo  TBSCert.Plo  TBSData.Plo  ThreeDLocation.Plo  Time32.Plo  Time64.Plo  Uint16.Plo  (+158 more)
asn/.libs/: libasn.la  libasn.lai
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
include/glog/: logging.h
lib/: libasn.so.0.0.0  libsomething.la  libsomething.so.0  libsomething.so.0.0.0
lib/vsomeip/: libvsomeip3-e2e.so.3.1.20
src/: context.hpp  main.cpp
src/.deps/: main-main.Po  sec_v2xd-main.Po
src/api/: cert_param.cpp  cert_param.hpp  gmssl.cpp  gmssl.hpp  parse_x509.cpp  parse_x509.hpp  sec_codec.cpp  sec_codec.hpp  sec_type.hpp
src/api/.deps/: main-sec_codec.Po  sec_v2xd-cert_param.Po  sec_v2xd-gmssl.Po  sec_v2xd-parse_x509.Po  sec_v2xd-sec_codec.Po
src/apps/: log.cpp  log.hpp
src/apps/.deps/: main-log.Po  sec_v2xd-log.Po
src/apps/Engine/: openssl_engine.cpp
src/apps/SomeIP/AesGcm/: Makefile  aes_gcm  crypto_service  security_app.hpp  security_app_main.cpp
src/apps/SomeIP/Client/: Makefile  client  client.hpp  client_main.cpp  local.json  run.sh
src/apps/SomeIP/Security/: Evp-gcm-encrypt.c  Makefile  aes128_gcm.hpp  aes_gcm  someip_security.hpp
src/apps/SomeIP/Server/: Makefile  crypto_service  crypto_service.hpp  crypto_service.json  crypto_service_main.cpp  run.sh
src/apps/TLS/Client/: Client  Makefile  TLS_Client.cpp
src/apps/TLS/Server/: Makefile  Server  TLS_Server.cpp
src/apps/TLS/Server/Cert/: server_cert.pem  server_key.pem
src/apps/TLS_PSK/: Readme.txt
src/apps/TLS_PSK/Client/: Client  Makefile  PSK_Client.cpp  sample_client.cpp
src/apps/TLS_PSK/Server/: Makefile  PSK_Server.cpp  Server  sample_server.cpp
trustStore/certs/: a.out  parse_cert.cpp  usercert.pem
trustStore/private/: a.out  parse_key.cpp  userkey.pem
